// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeader is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiHeader ouiHeader--default ouiHeader--static testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiHeader renders children 1`] = `
<div
  class="ouiHeader ouiHeader--default ouiHeader--static"
>
  <span>
    Hello!
  </span>
</div>
`;

exports[`OuiHeader renders dark theme 1`] = `
<div
  class="ouiHeader ouiHeader--dark ouiHeader--static"
/>
`;

exports[`OuiHeader renders in fixed position 1`] = `
<div
  class="ouiHeader ouiHeader--default ouiHeader--fixed"
>
  <span>
    Hello!
  </span>
</div>
`;

exports[`OuiHeader sections render breadcrumbs and props 1`] = `
<div
  class="ouiHeader ouiHeader--default ouiHeader--static"
>
  <nav
    aria-label="breadcrumb"
    class="ouiBreadcrumbs ouiHeaderBreadcrumbs ouiBreadcrumbs--truncate"
  >
    <div
      class="ouiBreadcrumbWall ouiBreadcrumbWall--single"
    >
      <div
        class="ouiBreadcrumbWrapper ouiBreadcrumbWrapper--first ouiBreadcrumbWrapper--last"
      >
        <span
          aria-current="page"
          class="ouiBreadcrumb ouiBreadcrumb--last"
        >
          Breadcrumb
        </span>
      </div>
    </div>
  </nav>
</div>
`;

exports[`OuiHeader sections render simple items and borders 1`] = `
<div
  class="ouiHeader ouiHeader--default ouiHeader--static"
>
  <div
    class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
  >
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderRight"
    >
      Item 1
    </div>
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderRight"
    >
      Item 2
    </div>
  </div>
  <div
    class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
  >
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
    >
      Item A
    </div>
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
    >
      Item B
    </div>
  </div>
</div>
`;

exports[`OuiHeader throws a warning if both children and sections were passed 1`] = `
<div
  class="ouiHeader ouiHeader--default ouiHeader--static"
>
  <div
    class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
  >
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
    >
      Item 1
    </div>
    <div
      class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
    >
      Item 2
    </div>
  </div>
</div>
`;
